# KRG13_Dev

./: settings.gradle
LibraryJNI/: build.gradle
LibraryJNI/src/androidTest/java/com/rg/libraryjni/: ExampleInstrumentedTest.kt
LibraryJNI/src/main/cpp/: CMakeLists.txt  es_rgil.cpp  es_rgil.h  es_rgil_screen.h
LibraryJNI/src/test/java/com/rg/libraryjni/: ExampleUnitTest.kt
app/: build.gradle
app/libs/: pinappallexternall-release-1.2.aar
app/src/androidTest/java/com/rg/krg13_dev/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rg/krg13_dev/: MainActivity.kt
app/src/main/java/com/rg/krg13_dev/autocomputer/: AcAnswer.kt  AcRequest.kt  AutoComputerManager.kt  AutoComputerStatus.kt  AutoComputerStatusManager.kt  AutoComputerViewModel.kt  Data.kt  DeviceStateHolder.kt  StatusFlag.kt
app/src/main/java/com/rg/krg13_dev/navigation/: AppNavHost.kt  Screen.kt
app/src/main/java/com/rg/krg13_dev/pinappall/: PaymentViewModel.kt  PinAppAllClient.kt  PinAppAllManager.kt  PinAppAllState.kt
app/src/main/java/com/rg/krg13_dev/ui/: TariffScreen.kt
app/src/main/java/com/rg/krg13_dev/utils/: IpUtils.kt  LocaleManager.kt  NetDebug.kt  NetDebug2.kt  SoundManager.kt  SystemInfo.kt  (+4 more)
app/src/main/res/drawable/: logo_rgplus.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/test/java/com/rg/krg13_dev/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+40 files in other folders)
